# murmur

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
murmur-api/: Cargo.toml
murmur-api/src/: lib.rs
murmur-cli/: Cargo.toml
murmur-cli/src/: main.rs
murmur-coordinator/: Cargo.toml
murmur-coordinator/src/: election.rs  heartbeat.rs  lib.rs  lifecycle.rs  recovery.rs  scheduler.rs
murmur-core/: Cargo.toml
murmur-core/src/: chunk.rs  cluster.rs  config.rs  error.rs  event.rs  lib.rs  link.rs  manifest.rs  net.rs  node.rs  rpc.rs  task.rs  types.rs
murmur-daemon/: Cargo.toml
murmur-daemon/src/: bonded_download.rs  event_loop.rs  grpc.rs  lib.rs  main.rs  p2p.rs  proxy_orchestrator.rs  socks5.rs  state.rs  transfer.rs  url_manifest.rs  wan_fetch.rs
murmur-net/: Cargo.toml
murmur-net/src/: connection.rs  discovery.rs  framing.rs  lib.rs  quic.rs
murmur-overlay/: Cargo.toml
murmur-overlay/src/: lib.rs  membership.rs  peer_health.rs  state_table.rs  topology.rs
murmur-proto/: Cargo.toml
murmur-proto/proto/: control.proto
murmur-proto/src/: lib.rs
murmur-scheduler/: Cargo.toml
murmur-scheduler/src/: chunk_scheduler.rs  lib.rs  reassignment.rs  strategy.rs  task_queue.rs
murmur-storage/: Cargo.toml
murmur-storage/src/: chunk_store.rs  lib.rs
