[workspace]
resolver = "2"
members = [
    "murmur-api",
    "murmur-cli",
    "murmur-coordinator",
    "murmur-core",
    "murmur-daemon",
    "murmur-net",
    "murmur-overlay",
    "murmur-proto",
    "murmur-scheduler",
    "murmur-storage",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Aryan Mishra <aryan@drasta.one>"]
license = "MIT OR Apache-2.0"
rust-version = "1.88"
repository = "https://github.com/drasta-one/murmur"
description = "A peer-to-peer swarm coordination runtime"
keywords = ["p2p", "swarm", "distributed", "file-transfer", "networking"]
categories = ["network-programming", "concurrency"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
postcard = { version = "1", features = ["alloc"] }
tokio = { version = "1.52", features = ["full"] }
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.9"
rand_chacha = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
proptest = "1"
assert_matches = "1.5"
uuid = { version = "1", features = ["v4", "serde"] }
mdns-sd = "0.13"
bytes = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
