[package]
name = "murmur-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
murmur-core = { path = "../murmur-core" }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
murmur-proto = { path = "../murmur-proto" }
tonic = { workspace = true }
uuid = { workspace = true }
