[package]
name = "murmur-net"
description = "Real-world networking layer for Murmur (mDNS and TCP)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
murmur-core = { path = "../murmur-core" }
tokio = { workspace = true, features = ["net", "rt", "macros", "io-util", "sync", "time"] }
mdns-sd = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = "1"
quinn = "0.11.2"
rustls = "0.23"
rcgen = "0.13.1"
