[package]
name = "murmur-overlay"
description = "Overlay State Table and cluster topology for Murmur"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
murmur-core = { path = "../murmur-core" }
serde = { workspace = true }
tracing = { workspace = true }


