[package]
name = "murmur-proto"
description = "Protobuf definitions and generated gRPC code for Murmur"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
